<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="1dip" >

   
    <Button
        android:id="@+id/button_0"
        android:layout_width="99dip"
        android:layout_height="99dip"
        android:layout_alignParentLeft="true"
        android:text="@string/gen_0"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="99dip"
        android:layout_height="99dip"
        android:layout_below="@+id/button_0"
        android:text="@string/gen_1"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="99dip"
        android:layout_height="99dip"
        android:layout_toRightOf="@+id/button_0"
        android:text="@string/gen_2"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="99dip"
        android:layout_height="99dip"
        android:layout_below="@+id/button_2"
        android:layout_toRightOf="@+id/button_1"
        android:text="@string/gen_3"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="99dip"
        android:layout_height="99dip"
        android:layout_toRightOf="@+id/button_2"
        android:text="@string/gen_4"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="99dip"
        android:layout_height="99dip"
        android:layout_below="@+id/button_4"
        android:layout_toRightOf="@+id/button_3"
        android:text="@string/gen_5"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="99dip"
        android:layout_height="99dip"
        android:layout_toRightOf="@+id/button_4"
        android:text="@string/gen_6"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="99dip"
        android:layout_height="99dip"
        android:layout_below="@+id/button_6"
        android:layout_toRightOf="@+id/button_5"
        android:text="@string/gen_7"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="99dip"
        android:layout_height="99dip"
        android:layout_toRightOf="@+id/button_6"
        android:text="@string/gen_8"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="99dip"
        android:layout_height="99dip"
        android:layout_below="@+id/button_8"
        android:layout_toRightOf="@+id/button_7"
        android:text="@string/gen_9"
        android:textSize="36sp" />


    <ImageButton
        android:id="@+id/button_erase"
        android:layout_width="99dip"
        android:layout_height="99dip"
        android:layout_toRightOf="@+id/button_8"
        android:contentDescription="@string/gen_erase"
        android:src="@drawable/content_discard" />


    <ImageButton
        android:id="@+id/button_calc"
        android:layout_width="99dip"
        android:layout_height="99dip"
        android:layout_below="@+id/button_erase"
        android:layout_toRightOf="@+id/button_9"
        android:src="@drawable/content_save"
        android:contentDescription="@string/gen_calculator"
        android:textSize="36sp" />
</RelativeLayout>