<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/order_descr_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:background="@color/light_grey"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grey" />

    <TextView
        android:id="@+id/order_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:text="@string/unknown"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/order_amount_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_amount"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grey" />

    <TextView
        android:id="@+id/order_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/order_outlet_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/outlet"
         android:background="@color/light_grey"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grey" />

 <TextView
        android:id="@+id/order_outlet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:background="@color/light_grey"
        android:text="@string/unknown"
        android:textAppearance="?android:attr/textAppearanceLarge" />

 <TextView
     android:id="@+id/order_outlet_address_label"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/outlet_address"
     android:textAppearance="?android:attr/textAppearanceMedium"
     android:textColor="@color/grey" />

  <TextView
        android:id="@+id/order_outlet_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:textAppearance="?android:attr/textAppearanceLarge" />

  <TextView
      android:id="@+id/invoice_descr_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
       android:background="@color/light_grey"
      android:text="@string/invoice"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:textColor="@color/grey" />

  <TextView
        android:id="@+id/invoice_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:background="@color/light_grey"
        android:text="@string/unknown"
        android:textAppearance="?android:attr/textAppearanceLarge" />

  <TextView
      android:id="@+id/invoice_amount_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/invoice_amount"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:textColor="@color/grey" />

    <TextView
        android:id="@+id/invoice_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/order_cfr_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_cfr"
         android:background="@color/light_grey"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grey" />

    <TextView
        android:id="@+id/order_cfr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:background="@color/light_grey"
        android:text="@string/unknown"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   <TextView
        android:id="@+id/order_cfr_value_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cfr_value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grey" />
    
  <TextView
        android:id="@+id/order_cfr_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        android:textAppearance="?android:attr/textAppearanceLarge" /></LinearLayout>